samples/_failures_safe/1761641806_2ff30f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e848bff.c: In function ‘main’:
./samples/SAFE/__tmp_7e848bff.c:172:16: error: missing terminating " character
  172 |         printf("Failed to
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_7e848bff.c:172:9: error: expected expression at end of input
  172 |         printf("Failed to
      |         ^~~~~~
./samples/SAFE/__tmp_7e848bff.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e848bff.c:172:9: error: expected declaration or statement at end of input
